# oregon-law-parser

./: .travis.yml  README.md  stack.yaml
analyze/: analyze.cabal  stack.yaml
analyze/spec/: Spec.hs
analyze/src/: Amendment.hs  Cli.hs  Main.hs  StringOps.hs  Tika.hs
analyze/test/: AmendmentSpec.hs  StringOpsSpec.hs
fixtures/: input-1.html
