name:                analyze
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/dogweather/analyze-ors-amendment-haskell
license:             BSD3
license-file:        LICENSE
author:              Robb Shecter
maintainer:          robb@weblawsorg
copyright:           2016 Robb Shecter
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable analyze
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , aeson
                       , aeson-pretty
                       , base-unicode-symbols
                       , bytestring
                       , HandsomeSoup
                       , hxt
                       , regex-compat
                       , regex-posix
                       , split
                       , text
