name:                analyze
version:             0.1.0.0
synopsis:            Extract metadata from an Oregon session law
description:         Please see README.md
homepage:            https://github.com/dogweather/analyze-ors-amendment-haskell
license:             BSD3
license-file:        LICENSE
author:              Robb Shecter
maintainer:          robb@weblawsorg
copyright:           2016 Robb Shecter
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable analyze
  ghc-options:         -Wall -fno-warn-missing-signatures
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       StringOps, Amendment, Tika
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , aeson
                       , aeson-pretty
                       , base-unicode-symbols
                       , bytestring
                       , HandsomeSoup
                       , hspec
                       , hxt
                       , MissingH
                       , process
                       , QuickCheck
                       , regex-tdfa
                       , time
                       , text

test-suite tests
  ghc-options:         -Wall -fno-warn-missing-signatures
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:       Amendment, AmendmentSpec, StringOps, StringOpsSpec, Tika
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , aeson
                       , aeson-pretty
                       , base-unicode-symbols
                       , bytestring
                       , HandsomeSoup
                       , hspec
                       , hxt
                       , MissingH
                       , process
                       , QuickCheck
                       , regex-tdfa
                       , time
                       , text
